Clean up the use of deprecated numeric constructors (#3656)
This change cleans up the use of old deprecated numeric constructors..

Warnings like this will no longer happen:

[repeat] /home/bwalker/src/netbeans/java/testng/src/org/netbeans/modules/testng/AbstractTestGenerator.java:1700: warning: [deprecation] Float(float) in Float has been deprecated
[repeat]                     defValue = maker.Literal(new Float(0.0F));
[repeat]                                              ^

The newer implements favor factory methods like valueOf() or parseFloat() since they are likely to
yield significantly better space and time performance by caching frequently requested values.

Most of the changes are in the ide/profiler/enterprise/ide modules.