@@ -103,13 +103,12 @@ public class JsfVariableContext implements Comparable {
     public int compareTo(Object o) {
         final JsfVariableContext c = (JsfVariableContext)o;
 
-        int comp = new Integer(getFrom()).compareTo(c.getFrom());
-        if(comp != 0) {
+        int comp = Integer.valueOf(getFrom()).compareTo(c.getFrom());
+        if (comp != 0) {
             return comp;
         } else {
-            return new Integer(getTo()).compareTo(c.getTo());
+            return Integer.valueOf(getTo()).compareTo(c.getTo());
         }
-
     }
 
     @Override
